tt lab and whole testing part